<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guilherme.trabalho.PrincipalActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/CdtParticipantes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cadastrar_participantes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/CdtLivros"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/CdtReserva"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="3dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/CdtReserva"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cadastro_de_reserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/CdtLivros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_livros"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/CdtReserva"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/ListLivros"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="3dp"
        android:text="@string/listar_livros"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/CdtLivros"
        android:layout_marginRight="3dp" />

    <ListView
        android:id="@+id/LstParticipantes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/CdtParticipantes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />

</android.support.constraint.ConstraintLayout>
